--- a/WebServer/templates/test.html
+++ b/WebServer/templates/test.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="static/test.css">
     </head>
     <body class="theme">
-        <h1>UPDRAFT TEST GUI</h1>
+        <h1>UPDRAFT TEST UI</h1>
         <div class="gridlayout">
             <form class="fangrid" method="post" action="/" id="gridform">
                 <div class="fan">
@@ -96,7 +96,7 @@
             <div class="allfans">
                 <h1>All Fans </h1>
                 <form method="post" action="/" id="allfanform">
-                    <p><input class="allfaninput" type="text" name = "ALLFANS" value = "" placeholder="Enter desierd speed"></p>
+                    <p><input class="allfaninput" type="text" name = "ALLFANS" value = "" placeholder="speed"></p>
                     <p><input class="button" type = "submit" value="UPDATE ALL FANS" name="updatefan" form="allfanform"/></p>
                 </form>
                 <p><input class="button" type = "submit" value="UPDATE FANS" name="updatefan" form="gridform" /></p>
