--- a/WebServer/templates/test.html
+++ b/WebServer/templates/test.html
@@ -108,9 +108,9 @@
                     <div class="direction">
                         <h2>Direction : {{data['actuator'][0]}}</h2>
                         <input class="radiobtn" type="radio" name="DIRECTION" value="F2B" id="f2b">
-                        <label for="f2b">F2B</label>
+                        <label for="f2b">Pitch</label>
                         <input class="radiobtn" type="radio" name="DIRECTION" value="S2S" id="s2s">
-                        <label for="s2s">S2S</label>
+                        <label for="s2s">Roll</label>
                     </div>
 
                     <div class="angle">
